Fix overlapping text of meet the team part

--- a/theme/static/css/adaptive.css
+++ b/theme/static/css/adaptive.css
@@ -44,7 +44,7 @@
     }
 
     section#who p {
-        width: 225px;
+        width: 220px;
     }
 
     section#who p:nth-of-type(2) {
